kubernetes-networks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd-deployment
  namespace: homework
  labels:
    app: httpd
spec:
  replicas: 3
  strategy:
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app: httpd
  template:
    metadata:
      labels:
        app: httpd
    spec:
      nodeSelector:
        homework: "true"
      containers:
      - name: main-container
        image: busybox:stable
        command: ["sh", "-c", "httpd -f -p 8000"]
        workingDir: /homework
        ports:
        - name: httpd-port
          containerPort: 8000
        volumeMounts:
        - name: homework-volume
          mountPath: /homework
        lifecycle:
          preStop:
            exec:
              command: ["/bin/sh", "-c", "rm -fv /homework/index.html"]
        readinessProbe:
          httpGet:
            path: /index.html
            port: 8000
      volumes:
      - name: homework-volume
        emptyDir: {}
