kubernetes-networks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpd-service
  namespace: homework
spec:
  selector:
    app: httpd
  ports:
    - protocol: TCP
      port: 80
      targetPort: httpd-port
  type: ClusterIP
