kubernetes-networks/ingress-rewrite.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpd-ingress
  namespace: homework
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /homepage
spec:
  ingressClassName: nginx
  rules:
  - host: homework.otus
    http:
      paths:
      - path: /index.html
        pathType: ImplementationSpecific
        backend:
          service:
            name: httpd-service
            port:
              number: 80
